--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Landing page template built with HTML and Bootstrap 4 for presenting training courses, classes, workshops and for convincing visitors to register using the form.">
-    <meta name="author" content="Inovatik">
+    <meta name="description" content="The WMO Shareefa Fathima Qur'an Center, established in 2007, offers Islamic education in Wayanad district. Learn about its history, programs, and the academic oversight by WMO Imam Ghazali.">
+<meta name="author" content="WMO Shareefa Fathima Qur'an Center">
 
-    <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
-	<meta property="og:type" content="article" />
+<meta property="og:site_name" content="WMO Shareefa Fathima Qur'an Center">
+<meta property="og:site" content="https://yourwebsite.com">
+<meta property="og:title" content="WMO Shareefa Fathima Qur'an Center: A Legacy of Islamic Education">
+<meta property="og:description" content="Discover the WMO Shareefa Fathima Qur'an Center, a prestigious institution dedicated to Islamic education. Learn about our programs, history, and how to enroll.">
+<meta property="og:image" content="https://yourwebsite.com/image.jpg">
+<meta property="og:url" content="https://yourwebsite.com/landing-page">
+<meta property="og:type" content="website">
 
     <!-- Website Title -->
     <title>WMO SHAREEF FATHIMA THAHFEEZUL QUR'AN CENTRE KUNHOME, WAYANAD </title>
