--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/logo.jpg">
     <style>
         /* CSS for image container */
         .image-container {
