--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <meta name="description" content="The WMO Shareefa Fathima Qur'an Center, established in 2007, offers Islamic education in Wayanad district. Learn about its history, programs, and the academic oversight by WMO Imam Ghazali.">
+<meta name="description" content="The WMO Shareefa Fathima Qur'an Center, established in 2007, offers Islamic education in Wayanad district. Learn about its history, programs, and the academic oversight by WMO Imam Ghazali.">
 <meta name="author" content="WMO Shareefa Fathima Qur'an Center">
 
 <meta property="og:site_name" content="WMO Shareefa Fathima Qur'an Center">
-<meta property="og:site" content="https://yourwebsite.com">
+<meta property="og:site" content="https://wmoqurancentre.org">
 <meta property="og:title" content="WMO Shareefa Fathima Qur'an Center: A Legacy of Islamic Education">
 <meta property="og:description" content="Discover the WMO Shareefa Fathima Qur'an Center, a prestigious institution dedicated to Islamic education. Learn about our programs, history, and how to enroll.">
-<meta property="og:image" content="https://yourwebsite.com/image.jpg">
-<meta property="og:url" content="https://yourwebsite.com/landing-page">
+<meta property="og:image" content="https://wmoqurancentre.org/">
+<meta property="og:url" content="https://wmoqurancentre.org/">
 <meta property="og:type" content="website">
 
     <!-- Website Title -->
@@ -121,7 +121,7 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="tel:9207334315" style="color: #650101;">CONTACT</a>
+                    <a class="nav-link page-scroll" href="https://wa.me/9207334315" style="color: #650101;">CONTACT</a>
                 </li>
             </ul>
 
@@ -142,7 +142,7 @@
                         <h1 style="margin-top: 120px;">WMO Qur'an Centre </h1>
                         <p class="p-large" >WMO SHAREEF FATHIMA THAHFEEZUL QUR'AN CENTRE KUNHOME, WAYANAD </p>
                         <a class="btn-solid-lg page-scroll" href="#register">REGISTER</a>
-                        <a class="btn-outline-lg page-scroll" href="#instructor">LEARN MORE</a>
+                        <a class="btn-outline-lg page-scroll" href="https://wa.me/9207334315">LEARN MORE</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -410,7 +410,7 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="#contact">Contact</a></div>
+                                <div class="media-body"><a href="https://wa.me/9207334315">Contact</a></div>
                             </li>
                         </ul>
                     </div>
